test/good/generics/implicit01.px

func f(x) def
    return x * 2

print f(1)
print f("test")
