test/bad/generators/iterable03.px

func* f(): Char def
    yield "" by 2

f()
